# 99_Traz_Log_Rust

./: .gitignore  99_Traz_Log_IMtBProcurement_SOW.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
blockchain/: Anchor.toml  package-lock.json
blockchain/programs/blockchain/: Cargo.toml
blockchain/programs/blockchain/src/: lib.rs
blockchain/programs/blockchain/tests/: test_imtbprocurement.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  idl.json  index.css  main.jsx
