[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }
base64 = "0.21.7"

solana-client = "1.18.17"
solana-sdk = "1.18.17"
anchor-lang = "1.0.2"
blockchain = { path = "../blockchain/programs/blockchain", features = ["no-entrypoint"] }
